# qgrapho

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: qgrapho.example.toml
config/presets/: README.md  deepseek.toml  grok.toml  moonshot.toml
deploy/profiles/: README.md  dev-isolated.yaml  dev-native.yaml
docs/: README.md  architecture.md  capabilities.md  concepts.md  configuration.md  getting-started.md  installation.md  models.md
docs/assets/: README.md
mcp/: README.md
mcp/graph-intelligence/: README.md
scripts/: install-git-hooks.sh  install.ps1  install.sh
scripts/hooks/: prepare-commit-msg
services/: README.md
services/event-bridge/: README.md
services/graph-api/: README.md
services/runtime-projector/: README.md
services/schema-projector/: README.md
src/qgrapho/: __init__.py  cli.py  config.py  paths.py
src/qgrapho/commands/: __init__.py  doctor.py  index.py  init_cmd.py  start.py
tests/: test_cli.py
