[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "qgrapho"
version = "0.0.1"
description = "Graph-native autonomous engineering platform by Quanvio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Quanvio", email = "founder@quanvio.com" }]
keywords = ["agents", "knowledge-graph", "devtools", "platform-engineering", "mcp"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
qgrapho = "qgrapho.cli:main"

[project.urls]
Homepage = "https://github.com/quanvio/qgrapho"
Documentation = "https://github.com/quanvio/qgrapho/tree/main/docs"
Repository = "https://github.com/quanvio/qgrapho"
Issues = "https://github.com/quanvio/qgrapho/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/qgrapho"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
